syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message GetUserRequest {
  string username  = 1;
}

message UserResponse {
  string userId = 1;
  string username = 2;
  string email = 3;
}